# dhall-to-resume

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs  schema.dhall
src/templates/: resume.tex
templates/: resume.tex
